post safe point2