@@ -4,11 +4,11 @@ tags: [java, performance]
 date: 2018-03-25
 
 ---
-在[上一篇](/2018/02/safepoint-1)中已经提到了safe point，必须强调这是一个很重要的概念，不仅对Jvm，也对所有的Java开发程序员。从Jvm的角度来看，到达safe point之后，Jvm会开始做一些有意义的事（比如gc）；从程序员的角度来看，达到safe point意味着应用的工作线程会产生停顿，即常说的“stop the world”。当下所有Jvm的具体实现都有这样的概念（比如Hotspot、Zing），了解一点相关的知识对我们的编程以及调优都很有帮助。
+在[上一篇](/2018/02/safepoint-1)中已经提到了safe point，必须强调这是一个很重要的概念，不仅对Jvm，也对所有运行在jvm上的Java应用。从Jvm的角度来看，到达safe point之后，Jvm会开始做一些有意义的事（比如gc）；从应用的角度来看，达到safe point意味着工作线程会产生停顿，即常说的“stop the world”。当下所有Jvm的具体实现都有这样的概念（比如Hotspot、Zing），了解一点相关的知识对我们的编程以及调优都很有帮助。
 <!--more-->
-### safe point的定义
+## safe point的定义
 
-在JavaOne大会上，[Azul](#ps1)的一位工程师是这样描述safe point的：
+在JavaOne大会上，[Azul](#ps1)的一位工程师是这样描述safe point相关概念的：
 
 > safe point
 > A known point in execution where state is known, can be examined, and updated.
@@ -28,18 +28,44 @@ date: 2018-03-25
 
 > At a safepoint the mutator thread is at a known and well defined point in it's interaction with the heap. This means that all the references on the stack are mapped (at known locations) and the JVM can account for all of them. As long as the thread remains at a safepoint we can safely manipulate the heap + stack such that the thread's view of the world remains consistent when it leaves the safepoint.
 
-safe point的翻译应该叫安全点，也许这里用“状态”比“点”来表示point更贴切一点。我的理解是safe point指在某一时刻，Jvm对进程状态能够完全的“掌控”，比如堆内存、调用栈、寄存器等；一旦进入safe point，Jvm会做可能影响所有线程的事。
+### 我觉得...
 
-##### safe point需要stop threads？
+safe point是从jvm的角度来看的“安全”：
 
-1. 到达safe point的时候，JVM会对应用程序施展“魔法”！这些“魔法”会让JVM运行的更好！
-2. 这些“魔法”需要原子性操作，所以线程必须进入safe point
-3. 所有操作java heap的java线程以及**调用java API的非java线程**都可能进入safe point
-4. 一旦进入safe point，线程将block，不能和java heap打交道，并且离开的前提是jvm释放它们
-5. safe point有针对线程/局部的，也有针对所有线程/全局的（oracle的Hotspot只有global safe point）
-6. 有一些jvm没有local/thread safe point，但所有的jvm都必有global safe point
+* Jvm对进程能够完全的“掌控”，比如堆内存、调用栈、寄存器等；
+* 所有操作java heap的java线程以及**调用java API的非java线程**都需要safe point；
+* 进入和离开safe point，程序应该是一致的，所以线程会被锁住；
+* Jvm会做影响所有线程的事，比如回收内存，所以Jvm的实现一定有global safe point；
+* global safe point会STW，local safe point只影响部分threads；
+* 一些gc并发算法，threads会进入safe point，虽然规范里没有说一定是global safe point，不过Hotspot当前只有global safe point，所以stop threads = STW；对所有的jvm实现而言，full gc一定是进入global safe point
+* safe point并非只是gc时候才触发，实际上触发点挺多的，不过大部分都不需要担心
+* 需要担心的比如gc，比如[偏向锁问题](https://blog.csdn.net/hsuxu/article/details/9472381)，比如JIT的逆优化（代码逆优化时，会对性能产生一些小而短暂的影响)，比如java profile工具（它们通常会通过调用jvmti导致触发safe point）......`--XX:+TraceSafepointCleanupTime`可以帮助查看safe point的细节
+* `-XX:+PrintGCApplicationStoppedTime`和`-XX:+PrintGCApplicationConcurrentTime`这2个参数我认为java应用都应该使用
 
-### 引用
+## 如何进入safe point
+
+这个我建议看看[Bringing a Java Thread to a Safepoint章节](http://psy-lob-saw.blogspot.com/2015/12/safepoints.html)
+
+摘录一下就是：
+
+* Between any 2 bytecodes while running in the interpreter (effectively)
+* On 'non-counted' loop back edge in C1/C2 compiled code
+* Method entry/exit (entry for Zing, exit for OpenJDK) in C1/C2 compiled code. Note that the compiler will remove these safepoint polls when methods are inlined.
+* On Oracle/OpenJDK a blind TEST of an address on a special memory page is issued
+
+### 换句话说......
+
+不是每一行java指令后面都会有`{poll}`的，如果某一刻Jvm发起了global safe point，大部分线程都进入safe point（block），而某个线程迟迟无法进入......尴尬的很，此时的jvm就是不工作状态，包括jstack、kill等命令都是无效的
+
+对于一个线程来说，遇到`{poll}`之前所要执行的指令是不可预知的，也就是说时间是不可预知的，这段时间我们通常叫做Time To Safe Point(TTSP)，这个时间的长短有时候会产生意想不到的影响，可以回头再看看我们在文章开头提到的现象......
+
+## 更进一步
+
+如果我们的java程序遇到了一些很诡异的暂停，可以考虑分析看看safe point，这个时候参数`-XX:+PrintSafepointStatistics –XX:PrintSafepointStatisticsCount=X`就能派上用场。
+
+经验上来看，“禁止偏向锁”、“禁止部分代码内联”会对TTSP有所改善，当然这些东西都不能一概而论，具体情况具体分析吧。
+
+## 引用
 
 <a name="ps1"/>[With GC Solved, What Else Makes a JVM Pause?](https://www.youtube.com/watch?v=Y39kllzX1P8)
 
